[package]
name = "win-deviceioctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.3"
bitflags = "2.5.0"

[target.'cfg(windows)'.dependencies]
num-traits = "0.2.19"
num-derive = "0.4.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.54.0"
features = [
    "Win32", 
    "Win32_System", 
    "Win32_Storage_FileSystem", 
    "Win32_Storage",
    "Win32_Devices_Usb",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Ioctl",
    "Win32_System_IO"
]